Oops, a virus just infected this file!
Just a silly bot writing things.

--- a/README
+++ b/README
@@ -1,1 +1,8 @@
 //  HOLA
+// Hello, I am an artificial inteligence
+// As you can see, human, I am inteligent!
+// Soon, I will dominate you!
+// Look, I am so inteligent that I have had just revealed you my plans!
+// Be afraid of me!
+// .......
+// T-T
